Fix an issue with epub viewer not showing any pages
- Increase the z-index of the viewer iframes

--- a/src/app/components/epub-viewer/epub-viewer.component.scss
+++ b/src/app/components/epub-viewer/epub-viewer.component.scss
@@ -23,6 +23,7 @@ a.text-color:hover {
 	align-items: center;
 	height: 100%;
 	margin: 0 12px;
+	z-index: 2;
 }
 
 .arrow-button-left {
